rregadmin/util/value.h

G_BEGIN_DECLS

/**
 * @defgroup value_util_group Value Object
 *
 * @ingroup util_group
 */

typedef struct Value_ Value;
/** Return whether the value implementation handles a particular type.
 *
 * @ingroup value_util_group
 */
gboolean value_can_handle (ValueType in_type);
/** Create an empty value.
 *
 * @ingroup value_util_group
 */
Value* value_create_none (void);
/** Create a dword value.
 *
 * @ingroup value_util_group
 */
Value* value_create_dword (dword_type in_int);
/** Create a dword value from big endian data.
 *
 * @ingroup value_util_group
 */
Value* value_create_dword_be (dword_type in_int);
/** Create a qword value.
 *
 * @ingroup value_util_group
 */
Value* value_create_qword (qword_type in_int);
/** Create a binary value.
 *
 * @ingroup value_util_group
 */
Value* value_create_binary (const guint8 *data, guint32 data_length);
/** This provides support for loading from binary data.
 *
 * @ingroup value_util_group
 */
Value* value_create_from_binary (const guint8 *data, guint32 data_length,
                                 ValueType in_type);
/** This provides smart support for loading from a string.
 *
 * It can currently load strings, dwords, qwords, and specially
 * formatted binary data.
 *
 * @ingroup value_util_group
 */
Value* value_create_from_string (const gchar *data, ValueType in_type);
/** Create a string value.
 *
 * @ingroup value_util_group
 */
Value* value_create_string (const char *in_str, guint32 in_str_len,
                            UStringType in_type);
/** Create an expanded string value.
 *
 * @ingroup value_util_group
 */
Value* value_create_expanded_string (const char *in_str, guint32 in_str_len,
                                     UStringType in_type);
/** Create a multi string value.
 *
 * @ingroup value_util_group
 */
Value* value_create_multi_string_bin (const char *in_str,
                                      guint32 in_str_len,
                                      UStringType in_type);
/** Create a multi string value from a string
 *
 * @ingroup value_util_group
 */
Value* value_create_multi_string (const char *in_str,
                                  guint32 in_str_len,
                                  UStringType in_type);
/** Copy a value
 *
 * @ingroup value_util_group
 */
Value* value_copy (const Value *in_val);
/** Free a value.
 *
 * @ingroup value_util_group
 */
gboolean value_free (Value *in_val);
/** Check the equality of values.
 *
 * @ingroup value_util_group
 */
gboolean value_equal (const Value *in_val1, const Value *in_val2);
/** Check the equality of values.
 *
 * @ingroup value_util_group
 */
int value_compare (const Value *in_val1, const Value *in_val2);
/** Check the validity of the value.
 *
 * You should never need to call this since creation and modification
 * of values is tightly controlled.
 *
 * @ingroup value_util_group
 */
gboolean value_is_valid (const Value *in_val);
/** Is this value an integral type?
 *
 * @ingroup value_util_group
 */
gboolean value_is_integral_type (const Value *in_val);
/** Is this value a string type?
 *
 * @ingroup value_util_group
 */
gboolean value_is_string_type (const Value *in_val);
/** Is this value a binary type?
 *
 * @ingroup value_util_group
 */
gboolean value_is_binary_type (const Value *in_val);
/** Apply a clear mask to the specified byte in the value.
 *
 * This is one of a very few methods that allow you to modify a Value
 * after it has been created.
 *
 * This method is only functional for integral and binary values.  All
 * others will fail.
 *
 * @ingroup value_util_group
 */
gboolean value_clear_bits (Value *in_val, guint32 in_bytenum, guint8 in_mask);
/** Apply a set mask to the specified byte in the value.
 *
 * This is one of a very few methods that allow you to modify a Value
 * after it has been created.
 *
 * This method is only functional for integral and binary values.  All
 * others will fail.
 *
 * @ingroup value_util_group
 */
gboolean value_set_bits (Value *in_val, guint32 in_bytenum, guint8 in_mask);
/** Get the raw length of the value.
 *
 * @ingroup value_util_group
 */
guint32 value_get_raw_length (const Value *in_val);
/** Get the type of the value.
 *
 * @ingroup value_util_group
 */
ValueType value_get_type (const Value *in_val);
/** Get a string rep of the type of the value.
 *
 * @ingroup value_util_group
 */
const char* value_get_type_str (const Value *in_val);
/** Get the value as a dword.
 *
 * For dwords and be dwords this does the expected thing.
 *
 * For qwords if the value is within the range of a dword it is converted
 * to a dword and returned.  If the value is larger than a dword can
 * contain then a MAXINT32 is returned.  If the value is smaller: MININT32.
 *
 * For any other type zero is returned.
 *
 * @ingroup value_util_group
 */
dword_type value_get_as_dword (const Value *in_val);
/** Get the value as a qword.
 *
 * For dwords, be dwords and qwords this does the expected thing.
 *
 * For any other type zero is returned.
 *
 * @ingroup value_util_group
 */
qword_type value_get_as_qword (const Value *in_val);
/** Get the value as a user friendly string.
 *
 * \note You must free the return with ustr_free
 *
 * @ingroup value_util_group
 */
ustring* value_get_as_string (const Value *in_val);
/** Get as a hex string.
 *
 * \note You must free the return with ustr_free
 *
 * @ingroup value_util_group
 */
ustring* value_get_as_hexstring (const Value *in_val);
/** Get binary data for the value.
 *
 * \note You must free the return with ustr_free
 *
 * @ingroup value_util_group
 */
guint8* value_get_as_binary (const Value *in_val);
/** Encode the value in an appropriate way for a hive file.
 *
 * \note You must call g_byte_array_free on the returned value.
 *
 * @ingroup value_util_group
 */
GByteArray* value_encode (const Value *in_val, guint32 in_encode_flags);