python/rregadmin/util/value_wrapper.py


# values for enumeration 'ValueType'
REG_NONE = 0
REG_SZ = 1
REG_EXPAND_SZ = 2
REG_BINARY = 3
REG_DWORD = 4
REG_DWORD_LITTLE_ENDIAN = 4
REG_DWORD_BIG_ENDIAN = 5
REG_LINK = 6
REG_MULTI_SZ = 7
REG_RESOURCE_LIST = 8
REG_FULL_RESOURCE_DESCRIPTOR = 9
REG_RESOURCE_REQUIREMENTS_LIST = 10
REG_QWORD = 11
REG_QWORD_LITTLE_ENDIAN = 11
REG_MAX = 11
REG_EMPTY = 12
REG_AUTO = 13
ValueType = c_int # enum
# ../../../rregadmin/util/value.h 46
value_can_handle = _libraries['librregadmin.so.1'].value_can_handle
value_can_handle.restype = gboolean
# value_can_handle(in_type)
value_can_handle.argtypes = [ValueType]
value_can_handle.__doc__ = \
"""gboolean value_can_handle(ValueType in_type)
../../../rregadmin/util/value.h:46"""
# ../../../rregadmin/util/value.h 40
class Value_(Structure):
    pass
Value = Value_
# ../../../rregadmin/util/value.h 52
value_create_none = _libraries['librregadmin.so.1'].value_create_none
value_create_none.restype = POINTER(Value)
# value_create_none()
value_create_none.argtypes = []
value_create_none.__doc__ = \
"""Value * value_create_none()
../../../rregadmin/util/value.h:52"""
dword_type = guint32
# ../../../rregadmin/util/value.h 58
value_create_dword = _libraries['librregadmin.so.1'].value_create_dword
value_create_dword.restype = POINTER(Value)
# value_create_dword(in_int)
value_create_dword.argtypes = [dword_type]
value_create_dword.__doc__ = \
"""Value * value_create_dword(dword_type in_int)
../../../rregadmin/util/value.h:58"""
# ../../../rregadmin/util/value.h 64
value_create_dword_be = _libraries['librregadmin.so.1'].value_create_dword_be
value_create_dword_be.restype = POINTER(Value)
# value_create_dword_be(in_int)
value_create_dword_be.argtypes = [dword_type]
value_create_dword_be.__doc__ = \
"""Value * value_create_dword_be(dword_type in_int)
../../../rregadmin/util/value.h:64"""
qword_type = gint64
# ../../../rregadmin/util/value.h 70
value_create_qword = _libraries['librregadmin.so.1'].value_create_qword
value_create_qword.restype = POINTER(Value)
# value_create_qword(in_int)
value_create_qword.argtypes = [qword_type]
value_create_qword.__doc__ = \
"""Value * value_create_qword(qword_type in_int)
../../../rregadmin/util/value.h:70"""
# ../../../rregadmin/util/value.h 76
value_create_binary = _libraries['librregadmin.so.1'].value_create_binary
value_create_binary.restype = POINTER(Value)
# value_create_binary(data, data_length)
value_create_binary.argtypes = [POINTER(guint8), guint32]
value_create_binary.__doc__ = \
"""Value * value_create_binary(unknown * data, guint32 data_length)
../../../rregadmin/util/value.h:76"""
# ../../../rregadmin/util/value.h 83
value_create_from_binary = _libraries['librregadmin.so.1'].value_create_from_binary
value_create_from_binary.restype = POINTER(Value)
# value_create_from_binary(data, data_length, in_type)
value_create_from_binary.argtypes = [POINTER(guint8), guint32, ValueType]
value_create_from_binary.__doc__ = \
"""Value * value_create_from_binary(unknown * data, guint32 data_length, ValueType in_type)
../../../rregadmin/util/value.h:83"""
# ../../../rregadmin/util/value.h 92
value_create_from_string = _libraries['librregadmin.so.1'].value_create_from_string
value_create_from_string.restype = POINTER(Value)
# value_create_from_string(data, in_type)
value_create_from_string.argtypes = [STRING, ValueType]
value_create_from_string.__doc__ = \
"""Value * value_create_from_string(unknown * data, ValueType in_type)
../../../rregadmin/util/value.h:92"""
# ../../../rregadmin/util/value.h 99
value_create_string = _libraries['librregadmin.so.1'].value_create_string
value_create_string.restype = POINTER(Value)
# value_create_string(in_str, in_str_len, in_type)
value_create_string.argtypes = [STRING, guint32, UStringType]
value_create_string.__doc__ = \
"""Value * value_create_string(unknown * in_str, guint32 in_str_len, UStringType in_type)
../../../rregadmin/util/value.h:99"""
# ../../../rregadmin/util/value.h 106
value_create_expanded_string = _libraries['librregadmin.so.1'].value_create_expanded_string
value_create_expanded_string.restype = POINTER(Value)
# value_create_expanded_string(in_str, in_str_len, in_type)
value_create_expanded_string.argtypes = [STRING, guint32, UStringType]
value_create_expanded_string.__doc__ = \
"""Value * value_create_expanded_string(unknown * in_str, guint32 in_str_len, UStringType in_type)
../../../rregadmin/util/value.h:106"""
# ../../../rregadmin/util/value.h 113
value_create_multi_string_bin = _libraries['librregadmin.so.1'].value_create_multi_string_bin
value_create_multi_string_bin.restype = POINTER(Value)
# value_create_multi_string_bin(in_str, in_str_len, in_type)
value_create_multi_string_bin.argtypes = [STRING, guint32, UStringType]
value_create_multi_string_bin.__doc__ = \
"""Value * value_create_multi_string_bin(unknown * in_str, guint32 in_str_len, UStringType in_type)
../../../rregadmin/util/value.h:113"""
# ../../../rregadmin/util/value.h 121
value_create_multi_string = _libraries['librregadmin.so.1'].value_create_multi_string
value_create_multi_string.restype = POINTER(Value)
# value_create_multi_string(in_str, in_str_len, in_type)
value_create_multi_string.argtypes = [STRING, guint32, UStringType]
value_create_multi_string.__doc__ = \
"""Value * value_create_multi_string(unknown * in_str, guint32 in_str_len, UStringType in_type)
../../../rregadmin/util/value.h:121"""
# ../../../rregadmin/util/value.h 127
value_copy = _libraries['librregadmin.so.1'].value_copy
value_copy.restype = POINTER(Value)
# value_copy(in_val)
value_copy.argtypes = [POINTER(Value)]
value_copy.__doc__ = \
"""Value * value_copy(unknown * in_val)
../../../rregadmin/util/value.h:127"""
# ../../../rregadmin/util/value.h 133
value_free = _libraries['librregadmin.so.1'].value_free
value_free.restype = gboolean
# value_free(in_val)
value_free.argtypes = [POINTER(Value)]
value_free.__doc__ = \
"""gboolean value_free(Value * in_val)
../../../rregadmin/util/value.h:133"""
# ../../../rregadmin/util/value.h 139
value_equal = _libraries['librregadmin.so.1'].value_equal
value_equal.restype = gboolean
# value_equal(in_val1, in_val2)
value_equal.argtypes = [POINTER(Value), POINTER(Value)]
value_equal.__doc__ = \
"""gboolean value_equal(unknown * in_val1, unknown * in_val2)
../../../rregadmin/util/value.h:139"""
# ../../../rregadmin/util/value.h 145
value_compare = _libraries['librregadmin.so.1'].value_compare
value_compare.restype = c_int
# value_compare(in_val1, in_val2)
value_compare.argtypes = [POINTER(Value), POINTER(Value)]
value_compare.__doc__ = \
"""int value_compare(unknown * in_val1, unknown * in_val2)
../../../rregadmin/util/value.h:145"""
# ../../../rregadmin/util/value.h 154
value_is_valid = _libraries['librregadmin.so.1'].value_is_valid
value_is_valid.restype = gboolean
# value_is_valid(in_val)
value_is_valid.argtypes = [POINTER(Value)]
value_is_valid.__doc__ = \
"""gboolean value_is_valid(unknown * in_val)
../../../rregadmin/util/value.h:154"""
# ../../../rregadmin/util/value.h 160
value_is_integral_type = _libraries['librregadmin.so.1'].value_is_integral_type
value_is_integral_type.restype = gboolean
# value_is_integral_type(in_val)
value_is_integral_type.argtypes = [POINTER(Value)]
value_is_integral_type.__doc__ = \
"""gboolean value_is_integral_type(unknown * in_val)
../../../rregadmin/util/value.h:160"""
# ../../../rregadmin/util/value.h 166
value_is_string_type = _libraries['librregadmin.so.1'].value_is_string_type
value_is_string_type.restype = gboolean
# value_is_string_type(in_val)
value_is_string_type.argtypes = [POINTER(Value)]
value_is_string_type.__doc__ = \
"""gboolean value_is_string_type(unknown * in_val)
../../../rregadmin/util/value.h:166"""
# ../../../rregadmin/util/value.h 172
value_is_binary_type = _libraries['librregadmin.so.1'].value_is_binary_type
value_is_binary_type.restype = gboolean
# value_is_binary_type(in_val)
value_is_binary_type.argtypes = [POINTER(Value)]
value_is_binary_type.__doc__ = \
"""gboolean value_is_binary_type(unknown * in_val)
../../../rregadmin/util/value.h:172"""
# ../../../rregadmin/util/value.h 184
value_clear_bits = _libraries['librregadmin.so.1'].value_clear_bits
value_clear_bits.restype = gboolean
# value_clear_bits(in_val, in_bytenum, in_mask)
value_clear_bits.argtypes = [POINTER(Value), guint32, guint8]
value_clear_bits.__doc__ = \
"""gboolean value_clear_bits(Value * in_val, guint32 in_bytenum, guint8 in_mask)
../../../rregadmin/util/value.h:184"""
# ../../../rregadmin/util/value.h 196
value_set_bits = _libraries['librregadmin.so.1'].value_set_bits
value_set_bits.restype = gboolean
# value_set_bits(in_val, in_bytenum, in_mask)
value_set_bits.argtypes = [POINTER(Value), guint32, guint8]
value_set_bits.__doc__ = \
"""gboolean value_set_bits(Value * in_val, guint32 in_bytenum, guint8 in_mask)
../../../rregadmin/util/value.h:196"""
# ../../../rregadmin/util/value.h 202
value_get_raw_length = _libraries['librregadmin.so.1'].value_get_raw_length
value_get_raw_length.restype = guint32
# value_get_raw_length(in_val)
value_get_raw_length.argtypes = [POINTER(Value)]
value_get_raw_length.__doc__ = \
"""guint32 value_get_raw_length(unknown * in_val)
../../../rregadmin/util/value.h:202"""
# ../../../rregadmin/util/value.h 208
value_get_type = _libraries['librregadmin.so.1'].value_get_type
value_get_type.restype = ValueType
# value_get_type(in_val)
value_get_type.argtypes = [POINTER(Value)]
value_get_type.__doc__ = \
"""ValueType value_get_type(unknown * in_val)
../../../rregadmin/util/value.h:208"""
# ../../../rregadmin/util/value.h 214
value_get_type_str = _libraries['librregadmin.so.1'].value_get_type_str
value_get_type_str.restype = STRING
# value_get_type_str(in_val)
value_get_type_str.argtypes = [POINTER(Value)]
value_get_type_str.__doc__ = \
"""unknown * value_get_type_str(unknown * in_val)
../../../rregadmin/util/value.h:214"""
# ../../../rregadmin/util/value.h 228
value_get_as_dword = _libraries['librregadmin.so.1'].value_get_as_dword
value_get_as_dword.restype = dword_type
# value_get_as_dword(in_val)
value_get_as_dword.argtypes = [POINTER(Value)]
value_get_as_dword.__doc__ = \
"""dword_type value_get_as_dword(unknown * in_val)
../../../rregadmin/util/value.h:228"""
# ../../../rregadmin/util/value.h 238
value_get_as_qword = _libraries['librregadmin.so.1'].value_get_as_qword
value_get_as_qword.restype = qword_type
# value_get_as_qword(in_val)
value_get_as_qword.argtypes = [POINTER(Value)]
value_get_as_qword.__doc__ = \
"""qword_type value_get_as_qword(unknown * in_val)
../../../rregadmin/util/value.h:238"""
# ../../../rregadmin/util/value.h 246
value_get_as_string = _libraries['librregadmin.so.1'].value_get_as_string
value_get_as_string.restype = POINTER(ustring)
# value_get_as_string(in_val)
value_get_as_string.argtypes = [POINTER(Value)]
value_get_as_string.__doc__ = \
"""ustring * value_get_as_string(unknown * in_val)
../../../rregadmin/util/value.h:246"""
# ../../../rregadmin/util/value.h 254
value_get_as_hexstring = _libraries['librregadmin.so.1'].value_get_as_hexstring
value_get_as_hexstring.restype = POINTER(ustring)
# value_get_as_hexstring(in_val)
value_get_as_hexstring.argtypes = [POINTER(Value)]
value_get_as_hexstring.__doc__ = \
"""ustring * value_get_as_hexstring(unknown * in_val)
../../../rregadmin/util/value.h:254"""
# ../../../rregadmin/util/value.h 262
value_get_as_binary = _libraries['librregadmin.so.1'].value_get_as_binary
value_get_as_binary.restype = POINTER(guint8)
# value_get_as_binary(in_val)
value_get_as_binary.argtypes = [POINTER(Value)]
value_get_as_binary.__doc__ = \
"""guint8 * value_get_as_binary(unknown * in_val)
../../../rregadmin/util/value.h:262"""
# ../../../rregadmin/util/value.h 278
value_encode = _libraries['librregadmin.so.1'].value_encode
value_encode.restype = POINTER(GByteArray)
# value_encode(in_val, in_encode_flags)
value_encode.argtypes = [POINTER(Value), guint32]
value_encode.__doc__ = \
"""GByteArray * value_encode(unknown * in_val, guint32 in_encode_flags)
../../../rregadmin/util/value.h:278"""
